Update SavedListSearchPagedBaseSimulation.java